@@ -13,3 +13,6 @@ New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - Refactoring of unit tests.
 - Adding the clear method to CPSVocabulary, as it was in the base Vocabulary.
+- Added datamodel to the namespace of default value expressions in fields. This
+  is safe because the argument defaults to None. Only documents provide their
+  DataModel, it is too complicated for directories and lack use cases.
